<resources>
    <string name="app_name">Football Apps</string>
    <string name="score">Score</string>
    <string name="line_up">Line Up</string>
    <string name="goals_keeper">Goals Keeper</string>
    <string name="kosong">kosong</string>

    <string name="goals_detail">Goals</string>

    <string name="_0">0</string>
    <string name="vs">VS</string>
    <string name="manchester_city">Manchester city</string>
    <string name="substitutes">Substitutes</string>
    <string name="forward">Forward</string>
    <string name="defense">Defense</string>
    <string name="midfield">Midfield</string>
    <string name="waktu">waktu</string>
    <string name="tanggal">Tanggal</string>
    <string name="shots">Shots</string>
    <array name="league">
        <item>English Premier League</item>
        <item>English League Championship</item>
        <item>Scottish</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
        <item>Spanish La Liga</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next_match">Next Match</string>
    <string name="last_match">Last Match</string>
    <string name="favorites">Favorites</string>
    <string name="teams">Teams</string>
    <string name="tinggi_badan_player">Tinggi badan Player</string>
    <string name="berat_badan_player">Berat badan Player</string>
    <string name="posisi_player">Posisi Player</string>
    <string name="nama_player">Nama Player</string>
    <string name="weight_kg">Weight(Kg)</string>
    <string name="height_m">Height(m)</string>
    <string name="deskripsi">deskripsi</string>
    <string name="search">Search</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="match">Match</string>
</resources>
