<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/date_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tanggal"
            android:textAlignment="center"
            android:textColor="#3dafc1"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/time_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/waktu"
            android:textAlignment="center"
            android:textColor="#3dafc1"
            android:textSize="20sp"
            android:textStyle="bold"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/manchester_city"
                android:textSize="16sp"

                />

            <TextView
                android:id="@+id/score_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/_0"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:text="@string/vs"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/score_away"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/_0"
                android:textAlignment="center"

                android:textSize="16sp"

                />

            <TextView
                android:id="@+id/name_away"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/manchester_city"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/event_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kosong"
        android:visibility="invisible"

        />
</androidx.cardview.widget.CardView>
