<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"

    >
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_teams"
        android:id="@+id/img_player"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_player"
        android:layout_toRightOf="@id/img_player"
        android:id="@+id/name_player"
        android:textColor="#000"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/posisi_player"
            android:layout_toRightOf="@id/img_player"
            android:id="@+id/position_player"
            android:layout_below="@id/name_player"

            />        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/berat_badan_player"
            android:layout_toRightOf="@id/img_player"
            android:id="@+id/weight_player"
            android:layout_below="@id/position_player"

            />      <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tinggi_badan_player"
            android:layout_toRightOf="@id/img_player"
            android:id="@+id/height_player"
            android:layout_below="@id/weight_player"

            />



    </RelativeLayout>
</androidx.cardview.widget.CardView>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/fanart"
        android:visibility="invisible"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:id="@+id/deskripsi"
        android:visibility="invisible"
        />

</RelativeLayout>