<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        tools:context=".activity.detail.event.DetailEvents">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:id="@+id/place_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/date_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textAlignment="center"
                        android:textColor="#3dafc1"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/time_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:textAlignment="center"
                        android:textColor="#3dafc1"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/place_name"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/img_home"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:background="@color/colorPrimary"
                            android:contentDescription="@string/kosong" />

                        <TextView
                            android:id="@+id/name_home"
                            android:layout_width="130dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/manchester_city"
                            android:textAlignment="center"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/score_home"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_weight="0.6"
                        android:text="@string/_0"
                        android:textAlignment="center"
                        android:textColor="#3dafc1"
                        android:textSize="19sp"
                        android:textStyle="bold"

                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_weight="0.6"
                        android:text="@string/vs"
                        android:textAlignment="center"
                        android:textColor="#3dafc1"
                        android:textSize="17sp"
                        android:textStyle="bold"

                        />

                    <TextView
                        android:id="@+id/score_away"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_weight="0.6"
                        android:text="@string/_0"
                        android:textAlignment="center"
                        android:textColor="#3dafc1"

                        android:textSize="19sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/img_away"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:background="@color/colorPrimary"
                            android:contentDescription="@string/kosong" />

                        <TextView
                            android:id="@+id/name_away"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:text="@string/manchester_city"
                            android:textAlignment="center"
                            android:textSize="16sp" />
                    </LinearLayout>


                </LinearLayout>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:visibility="invisible" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/line_up"
                    android:textAlignment="center"
                    android:textColor="#3dafc1"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/GoalTeamHome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"

                        android:hint="@string/kosong"

                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/goals_detail"
                        android:textAlignment="center"

                        android:textColor="#3dafc1"
                        android:textStyle="bold"

                        />

                    <TextView
                        android:id="@+id/GoalTeamAway"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"

                        android:hint="@string/kosong"
                        android:textAlignment="center"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/ScoreTeamHome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"

                        android:hint="@string/kosong"

                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/shots"
                        android:textAlignment="center"

                        android:textColor="#3dafc1"
                        android:textStyle="bold"

                        />

                    <TextView
                        android:id="@+id/ScoreTeamAway"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"

                        android:hint="@string/kosong"
                        android:textAlignment="center"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/GoalKeeperTeamHome1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"

                        android:hint="@string/kosong"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/goals_keeper"
                        android:textAlignment="center"

                        android:textColor="#3dafc1"
                        android:textStyle="bold"

                        />

                    <TextView
                        android:id="@+id/GoalKeeperTeamAway1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:hint="@string/kosong"
                        android:textAlignment="center"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/DefenseTeamHome1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"

                        android:hint="@string/kosong"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/defense"
                        android:textAlignment="center"

                        android:textColor="#3dafc1"
                        android:textStyle="bold"

                        />

                    <TextView
                        android:id="@+id/DefenseTeamAway1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:hint="@string/kosong"
                        android:textAlignment="center"
                        android:textSize="16sp"

                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/MidfieldTeamHome1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"

                        android:hint="@string/kosong"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/midfield"
                        android:textAlignment="center"

                        android:textColor="#3dafc1"
                        android:textStyle="bold"

                        />

                    <TextView
                        android:id="@+id/MidfieldTeamAway1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:hint="@string/kosong"
                        android:textAlignment="center"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/ForwardTeamHome1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"

                        android:hint="@string/kosong"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/forward"
                        android:textAlignment="center"

                        android:textColor="#3dafc1"
                        android:textStyle="bold"

                        />

                    <TextView
                        android:id="@+id/ForwardTeamAway1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:hint="@string/kosong"
                        android:textAlignment="center"
                        android:textSize="16sp"

                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/SubstitutesTeamHome1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"

                        android:hint="@string/kosong"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/substitutes"
                        android:textAlignment="center"

                        android:textColor="#3dafc1"
                        android:textStyle="bold"

                        />

                    <TextView
                        android:id="@+id/SubstitutesTeamAway1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_weight="0.5"
                        android:hint="@string/kosong"
                        android:textAlignment="center"
                        android:textSize="16sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/event_id1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</ScrollView>
